[package]
name = "math-comb"
version = "0.1.0"
edition = "2021"
authors = ["Ashwin Pugalia"]
description = "Combinatorial and modular arithmetic library."
license = "MIT"
repository = "https://github.com/Ashwin-1709/math-comb"
homepage = "https://github.com/Ashwin-1709/math-comb"
readme = "README.md"
keywords = ["algorithms", "maths", "combinatorics", "rust"]
categories = ["algorithms"]

[dependencies]
