[package]
name = "math-comb"
version = "0.2.3"
edition = "2021"
authors = ["Ashwin Pugalia"]
description = "Math library for Combinatorics, Modular arithmetic & Number Theory utilities."
license = "MIT"
repository = "https://github.com/Ashwin-1709/math-comb"
homepage = "https://github.com/Ashwin-1709/math-comb"
readme = "README.md"
keywords = ["algorithms", "maths", "combinatorics", "pollard-rho", "prime"]
categories = ["algorithms"]

[dependencies]
